# containerd-shim-spin

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  release.md  rust-toolchain.toml  rustfmt.toml  version.sh
.cargo/: config.toml
.devcontainer/: bootstrap.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: action-build.yaml  action-check.yml  action-docker-build-push.yaml  action-node-installer.yaml  action-test.yml  build.yaml  ci.yaml  docker-build-push.yaml  node-installer.yaml  release.yaml
conformance-tests/: Cargo.toml  README.md
conformance-tests/src/: main.rs
containerd-shim-spin/: Cargo.toml  quickstart.md
containerd-shim-spin/src/: constants.rs  engine.rs  layers.rs  loader.rs  main.rs  retain.rs  source.rs  stdio_hook.rs  trigger.rs  utils.rs  version.rs
cross/: Dockerfile
deployments/: README.md
deployments/k3d/: DockerSetup.md  Makefile  README.md  config.toml.tmpl
deployments/k3d/workload/: runtime.yaml  workload.yaml
deployments/k8s/: all-in-one-demo.yaml
deployments/workloads/: workload.yaml
images/: .gitignore
images/spin/: Cargo.toml  Dockerfile  spin.toml
images/spin-dapr/: .dockerignore  Dockerfile  README.md  spin.toml
images/spin-hello-world/: Dockerfile  spin.toml
images/spin-hello-world/go-hello/: go.mod
images/spin-inbound-redis/: Cargo.toml  Dockerfile  spin.toml
images/spin-keyvalue/: Cargo.toml  Dockerfile  spin.toml
images/spin-mqtt-message-logger/: Cargo.toml  Dockerfile  README  spin.toml
images/spin-mqtt-message-logger/src/: lib.rs
images/spin-multi-trigger-app/: Dockerfile  spin.toml
images/spin-multi-trigger-app/spin-http-trigger/: Cargo.toml
images/spin-multi-trigger-app/spin-http-trigger/src/: lib.rs
images/spin-multi-trigger-app/spin-redis-trigger/: Cargo.toml  Dockerfile  spin.toml
images/spin-multi-trigger-app/spin-redis-trigger/src/: lib.rs
images/spin-outbound-redis/: Cargo.toml  Dockerfile  spin.toml
images/spin-static-assets/: Dockerfile  spin.toml
images/spin-static-assets/assets/: jabberwocky.txt
images/spin_dotnet/: Dockerfile
node-installer/: Dockerfile  Makefile  README.md  integration-test-k3s.sh  integration-test-kind.sh  integration-test-microk8s.sh  integration-test-minikube.sh  integration-test.sh  kwasm-job.yml
node-installer/.kind/: kind-config.yaml
node-installer/script/: installer.sh
scripts/: build-and-push-images.sh  check-bins.sh  collect-debug-logs.sh  deploy-workloads.sh  down.sh  extract-changelog.sh  free-disk.sh  install-k3s.sh  k3d-up.sh  move-bins.sh  pod-terminates-test.sh  run-integration-tests.sh  setup-linux.sh  teardown-workloads.sh  up.sh  workloads-delete.sh  workloads-spin-registry-push.sh  workloads.sh
tests/: Cargo.toml
tests/k3d/workloads-pushed-using-spin-registry-push/: README.md  workloads.yaml
tests/k3s/: build-and-push-images.sh  install-k3s.sh
tests/k3s/workloads-pushed-using-spin-registry-push/: workloads.yaml
tests/src/: integration_test.rs
tests/workloads/: workload.yaml
tests/workloads-common/: mqtt-broker.yaml  runtime.yaml
tests/workloads-pushed-using-docker-build-push/: README.md  workloads.yaml
tests/workloads-pushed-using-spin-registry-push/: workloads.yaml
