[workspace.package]
version = "0.14.1"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/spinkube/containerd-shim-spin"
homepage = "https://github.com/spinkube/containerd-shim-spin"


[workspace]
resolver = "2"
members = [
    "tests",
    "containerd-shim-spin",
    "conformance-tests"
]
