[package]
name = "shim-conformance-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0"
conformance-tests = { git = "https://github.com/fermyon/conformance-tests", rev = "6ec9e9d95e3b333de85685131337c8864c1af67d" }
log = "0.4"
nix = { version = "0.29", features = ["signal", "process"] }
test-environment = { git = "https://github.com/fermyon/conformance-tests", rev = "6ec9e9d95e3b333de85685131337c8864c1af67d" }
