[package]
name = "containerd-shim-spin-v2"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
description = """
Containerd shim for running Spin workloads.
"""

[dependencies]
async-trait = "0.1"
containerd-shim-wasm = { git = "https://github.com/fibonacci1729/runwasi", branch = "precompiled" }
containerd-shim = "0.7.4"
http = "1"
log = "0.4"
spin-app = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
spin-core = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
spin-componentize = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
spin-compose = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
# Enable loading components precompiled by the shim
spin-trigger = { git = "https://github.com/fermyon/spin", tag = "v3.1.1", features = [
    "unsafe-aot-compilation",
] }
spin-trigger-http = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
spin-trigger-redis = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
trigger-mqtt = { git = "https://github.com/spinkube/spin-trigger-mqtt", tag = "v0.3.1" }
trigger-sqs = { git = "https://github.com/fermyon/spin-trigger-sqs", tag = "v0.8.1" }
trigger-command = { git = "https://github.com/fermyon/spin-trigger-command", rev = "v0.2.1" }
spin-manifest = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
spin-loader = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
spin-oci = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
spin-common = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
spin-expressions = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
spin-factors-executor = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
spin-telemetry = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
spin-runtime-factors = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
spin-factors = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
spin-factor-outbound-networking = { git = "https://github.com/fermyon/spin", tag = "v3.1.1" }
wasmtime = "25"
tokio = { version = "1", features = ["rt"] }
openssl = { version = "*", features = ["vendored"] }
serde = "1.0"
serde_json = "1.0"
url = "2.5"
anyhow = "1.0"
oci-spec = "0.7.1"
futures = "0.3"
ctrlc = { version = "3.4", features = ["termination"] }

[dev-dependencies]
wat = "1"
temp-env = "0.3.6"
toml = "0.8"
tempfile = "3"
