[package]
name = "containerd-shim-spin-v2"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
description = """
Containerd shim for running Spin workloads.
"""

[dependencies]
containerd-shim-wasm = { version ="0.7.0", default-features = false }
containerd-shim = "0.7.4"
http = "1"
log = "0.4"
spin-app = { git = "https://github.com/fermyon/spin", tag = "v3.1.2" }
spin-core = { git = "https://github.com/fermyon/spin", tag = "v3.1.2" }
spin-componentize = { git = "https://github.com/fermyon/spin", tag = "v3.1.2" }
# Enable loading components precompiled by the shim
spin-trigger = { git = "https://github.com/fermyon/spin", tag = "v3.1.2", features = [
    "unsafe-aot-compilation",
] }
spin-trigger-http = { git = "https://github.com/fermyon/spin", tag = "v3.1.2" }
spin-trigger-redis = { git = "https://github.com/fermyon/spin", tag = "v3.1.2" }
trigger-mqtt = { git = "https://github.com/kate-goldenring/spin-trigger-mqtt", rev = "512a12b136dda1f02459caaca70c5c2dc6ef2d08" }
trigger-sqs = { git = "https://github.com/kate-goldenring/spin-trigger-sqs", rev = "621df24a4ce650433dfb0dfb6028ad5905f22ad1" }
trigger-command = { git = "https://github.com/kate-goldenring/spin-trigger-command", rev = "bedc566404c2355c2d181b435139da89cd78a5c9" }
spin-manifest = { git = "https://github.com/fermyon/spin", tag = "v3.1.2" }
spin-loader = { git = "https://github.com/fermyon/spin", tag = "v3.1.2" }
spin-oci = { git = "https://github.com/fermyon/spin", tag = "v3.1.2" }
spin-common = { git = "https://github.com/fermyon/spin", tag = "v3.1.2" }
spin-expressions = { git = "https://github.com/fermyon/spin", tag = "v3.1.2" }
spin-factors-executor = { git = "https://github.com/fermyon/spin", tag = "v3.1.2" }
spin-telemetry = { git = "https://github.com/fermyon/spin", tag = "v3.1.2" }
spin-runtime-factors = { git = "https://github.com/fermyon/spin", tag = "v3.1.2" }
spin-factors = { git = "https://github.com/fermyon/spin", tag = "v3.1.2" }
spin-factor-outbound-networking = { git = "https://github.com/fermyon/spin", tag = "v3.1.2" }
wasmtime = "25"
tokio = { version = "1", features = ["rt"] }
openssl = { version = "*", features = ["vendored"] }
serde = "1.0"
serde_json = "1.0"
url = "2.5"
anyhow = "1.0"
oci-spec = "0.6.3"
futures = "0.3"
ctrlc = { version = "3.4", features = ["termination"] }

[dev-dependencies]
wat = "1"
temp-env = "0.3.6"
toml = "0.8"
tempfile = "3"
