[package]
name = "containerd-shim-spin-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
curl = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }


[dev-dependencies]
http = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
redis = { workspace = true }