[package]
name = "containerd-shim-spin-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
anyhow = "1"
curl = { version = "0.4", features = ["static-curl"] }
redis = { version = "0.27", features = ["tokio-comp"] }
rumqttc = "0.24.0"
tokio = { version = "1", features = ["rt", "macros", "process"] }