[package]
name = "spin-redis-trigger"
authors = ["Rajat Jindal <rajatjindal83@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# The Spin SDK.
spin-sdk = "2.2.0"

[workspace]
